[tool.poetry]
name = "pks"
version = "0.1.0"
description = ""
authors = ["Stefano Mosconi <stefano.mosconi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
